[tool.poetry]
name = "spotify-stuff"
version = "0.1.0"
description = "place to mess about with spotify api"
authors = ["urquha <andy.urquhart@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
spotipy = "^2.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
